--- a/arch/arm/boot/dts/overlays/README
+++ b/arch/arm/boot/dts/overlays/README
@@ -2413,6 +2413,12 @@ Params: speed                   Display SPI bus speed
         xohms                   Touchpanel sensitivity (X-plate resistance)
 
 
+Name:   norns-buttons-encoders.dts
+Info:   Norns buttons and encoders
+Load:   dtoverlay=norns-buttons-encoders
+Params: <None>
+
+
 Name:   ov5647
 Info:   Omnivision OV5647 camera module.
         Uses Unicam 1, which is the standard camera connector on most Pi
